@@ -1,3 +1,7 @@
+2011-06-29  Simson Garfinkel  <simsong@Alphonse-Mucha.local>
+
+	* hashdeep/common.h: moved sys/cdefs.h from tchar-local.h to common.h; added #ifdef
+
 2011-06-24  Simson Garfinkel  <simsong@msimsonnet.local>
 
 	* hashdeep/main.h: make_newline changed to print_newline(). No longer takes state. mode_zero changed to opt_zero.
